--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HTML, CSS, portfolio, Andrew, Shiroma">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Home | Andrew Shiroma</title>
+    <title>Andrew Shiroma | Portfolio</title>
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
