Created base index.html page and added others.

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,28 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    
+    <nav>
+        <div><h2><a href="index.html">ANDREW<span class="text-fancy">SHIROMA</a></span></h2></div>
+        <div>
+            <ul>
+                <li><a href="index.html" class="current-anchor">HOME</a></li>
+                <li><a href="portfolio.html">PORTFOLIO</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="resume.html">RESUME</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <section class="intro test-border">
+        <div class="intro-text">
+            <h1>Hello, I'm Andrew</h1>
+            <h2>An aspiring <span class='text-fancy'>computer scientist</span></h2>
+            <p><a href="portfolio.html">SEE MY WORK</a></p>
+        </div>
+        <div class="test-border">
+            <img src='../images/self.jpg' alt="Headshot of Andrew Shiroma" id="intro-image">
+        </div>
+    </section>
 </body>
 </html>
 
