changed src img

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p><a href="portfolio.html">SEE MY WORK</a></p>
         </div>
         <div class="test-border">
-            <img src='../assets/images/self.jpg' alt="Headshot of Andrew Shiroma" id="intro-image">
+            <img src='/assets/images/self.jpg' alt="Headshot of Andrew Shiroma" id="intro-image">
         </div>
     </section>
 </body>
