added portfolio name to link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Andrew Shiroma | Portfolio</title>
-    <link href="/assets/css/styles.css" rel="stylesheet">
+    <link href="andrew-portfolio-website/assets/css/styles.css" rel="stylesheet">
 </head>
 <body>
     <nav>
