moved styles and renamed link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Andrew Shiroma | Portfolio</title>
-    <link href="/assets/css/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -30,7 +30,7 @@
             <p><a href="portfolio.html">SEE MY WORK</a></p>
         </div>
         <div class="test-border">
-            <img src='/assets/images/self.jpg' alt="Headshot of Andrew Shiroma" id="intro-image">
+            <img src='images/self.jpg' alt="Headshot of Andrew Shiroma" id="intro-image">
         </div>
     </section>
 </body>
