removed red test borders

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         </div>
     </nav>
 
-    <section class="intro test-border">
+    <section class="intro">
         <div class="intro-text">
             <h1>Hello, I'm Andrew</h1>
             <h2>An aspiring <span class='text-fancy'>computer scientist</span></h2>
             <p><a href="portfolio.html">SEE MY WORK</a></p>
         </div>
-        <div class="test-border">
+        <div>
             <img src='images/self.jpg' alt="Headshot of Andrew Shiroma" id="intro-image">
         </div>
     </section>
