--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <ul>
                 <li><a href="index.html" class="current-anchor">HOME</a></li>
                 <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="resume.html">RESUME</a></li>
             </ul>
         </div>
@@ -27,12 +26,22 @@
         <div class="intro-text">
             <h1>Hello, I'm Andrew</h1>
             <h2>An aspiring <span class='text-fancy'>computer scientist</span></h2>
-            <p><a href="portfolio.html">SEE MY WORK</a></p>
+            <p>I dabble in hmtl, css, python, and sql</p>
+            
         </div>
         <div>
-            <img src='images/self.jpg' alt="Headshot of Andrew Shiroma" id="intro-image">
+            <img src='images/Andrew_background.png' alt="Headshot of Andrew Shiroma" id="intro-image">            
         </div>
     </section>
+
+    <div>
+        <p><a href="portfolio.html">SEE MY WORK</a></p>
+    </div>
+
+    <section class="portfolio">
+        <h2>e</h2>
+    </section>
+    
 </body>
 </html>
 
