reveal text animation added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
+    <!--<div id="overlay" class="visible"></div>-->
     <nav>
         <div><h2><a href="index.html">ANDREW<span class="text-fancy">SHIROMA</a></span></h2></div>
         <div>
@@ -22,9 +23,9 @@
         </div>
     </nav>
 
-    <section class="intro">
-        <div class="intro-text">
-            <h1>Hello, I'm Andrew</h1>
+    <section id="intro">
+        <div class="intro-text test">
+            <h1 class="reveal-text-line">Hello World</h1>
             <h2>An aspiring <span class='text-fancy'>computer scientist</span></h2>
             <p>I dabble in hmtl, css, python, and sql</p>
             
@@ -42,6 +43,7 @@
         <h2>e</h2>
     </section>
     
+    <script src="script.js"></script>
 </body>
 </html>
 
