Landing page is now myself without background change

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="author" content="Andrew Shiroma">
     <meta name="description" content="Portfolio website of Andrew Shiroma">
-    <meta name="keywords" content="HTML, CSS, portfolio, Andrew, Shiroma">
+    <meta name="keywords" content="HTML, CSS, portfolio, resume, computer science, software engineer, Andrew, Shiroma">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Andrew Shiroma | Portfolio</title>
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <!--<div id="overlay" class="visible"></div>-->
     <nav>
         <div><h2><a href="index.html">ANDREW<span class="text-fancy">SHIROMA</a></span></h2></div>
         <div>
@@ -24,14 +23,14 @@
     </nav>
 
     <section id="intro">
-        <div class="intro-text test">
-            <h1 class="reveal-text-line">Hello World</h1>
+        <div class="intro-text">
+            <h1 class="reveal-text-line">Hi, I'm Andrew</h1>
             <h2>An aspiring <span class='text-fancy'>computer scientist</span></h2>
             <p>I dabble in hmtl, css, python, and sql</p>
             
         </div>
         <div>
-            <img src='images/Andrew_background.png' alt="Headshot of Andrew Shiroma" id="intro-image">            
+            <img src='images/self.jpg' alt="Headshot of Andrew Shiroma" id="intro-image">            
         </div>
     </section>
 
