added icon to page

--- a/index.html
+++ b/index.html
@@ -3,43 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Andrew Shiroma">
-    <meta name="description" content="Portfolio website of Andrew Shiroma">
+    <meta name="description" content="Portfolio website of computer science engineer Andrew Shiroma">
     <meta name="keywords" content="HTML, CSS, portfolio, resume, computer science, software engineer, Andrew, Shiroma">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Andrew Shiroma | Portfolio</title>
     <link href="styles.css" rel="stylesheet">
+    <link rel="icon" href="images/as_icon.png" type="image/icon type">
 </head>
-<body>
+<body class="fade-in">
     <nav>
         <div><h2><a href="index.html">ANDREW<span class="text-fancy">SHIROMA</a></span></h2></div>
         <div>
             <ul>
-                <li><a href="index.html" class="current-anchor">HOME</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="resume.html">RESUME</a></li>
+                <li><a href="index.html" class="current-anchor">ABOUT</a></li>
+                <li><a href="">PORTFOLIO</a></li>
+                <li><a href="">RESUME</a></li>
             </ul>
         </div>
     </nav>
 
     <section id="intro">
         <div class="intro-text">
-            <h1 class="reveal-text-line">Hi, I'm Andrew</h1>
-            <h2>An aspiring <span class='text-fancy'>computer scientist</span></h2>
-            <p>I dabble in hmtl, css, python, and sql</p>
-            
+            <h1>Hi, I'm Andrew</h1>
+            <h2>An aspiring <span class="text-fancy">computer scientist</span></h2>
+            <p>I dabble in <span class="text-fancy">hmtl</span>, <span class="text-fancy">css</span>, <span class="text-fancy">python</span>, and <span class="text-fancy">sql</span></p>
+            <a class="button">RESUME</a>
         </div>
         <div>
-            <img src='images/self.jpg' alt="Headshot of Andrew Shiroma" id="intro-image">            
+            <img src="images/self.jpg" alt="Headshot of Andrew Shiroma" id="intro-image">            
         </div>
     </section>
 
-    <div>
-        <p><a href="portfolio.html">SEE MY WORK</a></p>
-    </div>
-
-    <section class="portfolio">
-        <h2>e</h2>
+    <section id="portfolio">
+        <div class="grid-container">
+            <div class=""
+        </div>
     </section>
     
     <script src="script.js"></script>
