finished portfolio base and down arrow image

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div><h2><a href="index.html">ANDREW<span class="text-fancy">SHIROMA</a></span></h2></div>
         <div>
             <ul>
-                <li><a href="index.html" class="current-anchor">ABOUT</a></li>
-                <li><a href="">PORTFOLIO</a></li>
+                <li><a href="#intro" class="current-anchor">ABOUT</a></li>
+                <li><a href="#portfolio">PORTFOLIO</a></li>
                 <li><a href="">RESUME</a></li>
             </ul>
         </div>
@@ -35,12 +35,30 @@
         </div>
     </section>
 
+    <img src="images/arrowdown.png" id="arrowdown">
+
+    <h1 class="section-title">Portfolio</h1>
     <section id="portfolio">
-        <div class="grid-container">
-            <div class=""
+        <div class="portfolio-item">
+            <div class="portfolio-text">
+                <h2>lorum ipsum</h2>
+                <p>adfasdfasdfasdf</p>
+            </div>
+            <img src="images/self.jpg" class="portfolio-img">
+        </div>
+        
+        <div class="portfolio-item">
+            <div class="portfolio-text">
+                <h2>lorum ipsum</h2>
+                <p>adfasdfasdfasdf</p>
+            </div>
+            <img src="images/self.jpg" class="portfolio-img">
         </div>
     </section>
     
+    <footer class="test">
+        <img src="images/linkedin.png">
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
