--- a/index.html
+++ b/index.html
@@ -45,18 +45,23 @@
     <section id="portfolio">
         <div class="portfolio-item">
             <div class="portfolio-text">
-                <h2>lorum ipsum</h2>
-                <p>adfasdfasdfasdf</p>
+                <h2>Streamflow Forecast</h2>
+                <p>
+                    Using an anchor date, this python file retrieves government-monitored river water data from the current year and the past nine years. 
+                </p>
+                <p>
+                    This data is graphed to display certain unique or outstanding waterflow years.
+                </p>
             </div>
-            <img src="assets/images/self.jpg" class="portfolio-img">
+            <a href="https://github.com/Awnder/streamflow-forecast-shiroma" taret="_blank"><img src="assets/images/streamflow.PNG" alt="streamflow Andrew Shiroma" class="portfolio-img"></a>
         </div>
         
         <div class="portfolio-item">
+            <img src="assets/images/self.jpg" alt="Andrew Shiroma" class="portfolio-img">
             <div class="portfolio-text">
                 <h2>lorum ipsum</h2>
                 <p>adfasdfasdfasdf</p>
             </div>
-            <img src="assets/images/self.jpg" class="portfolio-img">
         </div>
     </section>
     
