removed that last item which was my face

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             <a href="https://github.com/Awnder/streamflow-forecast-shiroma" taret="_blank"><img src="assets/images/streamflow.PNG" alt="streamflow Andrew Shiroma" class="portfolio-img"></a>
         </div>
         
-        <div class="portfolio-item">
+        <!--<div class="portfolio-item">
             <img src="assets/images/self.jpg" alt="Andrew Shiroma" class="portfolio-img">
             <div class="portfolio-text">
                 <h2>lorum ipsum</h2>
                 <p>adfasdfasdfasdf</p>
             </div>
-        </div>
+        </div>-->
     </section>
     
     <footer>
