Added Tableau dashboard

--- a/index.html
+++ b/index.html
@@ -46,20 +46,29 @@
     <h1 class="section-title">Portfolio</h1>
     <section id="portfolio">
         <div class="portfolio-item">
+            <img src="assets/images/hr_dashboard.png" alt="Andrew Shiroma's Tableau HR Dashboard." class="portfolio-img">
             <div class="portfolio-text">
-                <h2>Streamflow Forecast</h2>
-                <h3>2023</h3>
-                <p>
-                    Using an anchor date, this python file retrieves government-monitored river water data from the current year and the past nine years. 
-                </p>
-                <p>
-                    This project focused on Python and Pandas.
-                </p>
+                <h2>HR Analytics Dashboard</h2>
+                <h3>2024</h3>
+                <p>An interactive Tableau dashboard displaying fictional HR employee attrition data.</p>
+                <p>This project focused on Tableau and data visualization.</p>
                 <div class="portfolio-icons">
-                    <a href="https://www.github.com/Awnder/streamflow-forecast-shiroma"><i class="fa-brands fa-github fa-2x"></i></a>
+                    <a href="https://public.tableau.com/views/HR_analytics_dashboard_17213380871360/HRAnalyticsDashboard?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="reverse-color"><i class="fa-regular fa-chart-bar fa-2x"></i></a>
                 </div>
             </div>
-            <a href="https://github.com/Awnder/streamflow-forecast-shiroma"><img src="assets/images/streamflow.PNG" alt="Streamflow project of Andrew Shiroma" class="portfolio-img"></a>
+        </div>
+
+        <div class="portfolio-item">
+            <div class="portfolio-text">
+                <h2>Streamflow Forecast</h2>
+                <h3>2024</h3>
+                <p>Using an anchor date, this python file retrieves government-monitored river water data from the current year and the past nine years.</p>
+                <p>This project focused on Python and Pandas.</p>
+                <div class="portfolio-icons">
+                    <a href="https://www.github.com/Awnder/streamflow-forecast-shiroma" class="reverse-color"><i class="fa-brands fa-github fa-2x"></i></a>
+                </div>
+            </div>
+            <img src="assets/images/streamflow.PNG" alt="Andrew Shiroma's Streamflow Python Project" class="portfolio-img">
         </div>
         
         <div class="portfolio-item">
@@ -67,10 +76,10 @@
             <div class="portfolio-text">
                 <h2>International Space Station Program</h2>
                 <h3>2018-2019</h3>
-                <p>Brethren Christian High School partnered with <a href="https://q4excellence.com/">Quest4Exellence</a> to send an experiment to the ISS.</p>
+                <p>Brethren Christian High School partnered with <a href="https://q4excellence.com/" class="reverse-color">Quest4Exellence</a> to send an experiment to the ISS.</p>
                 <p>I gave presentations, organized findings, and ran publicity.</p>
                 <div class="portfolio-icons">
-                    <a href="https://drive.google.com/drive/folders/1RkHM-Hkn--WxIgOtsHJuFAAzxTdeUFfR?usp=sharing"><i class="fa-solid fa-newspaper fa-2x"></i></a>
+                    <a href="https://drive.google.com/drive/folders/1RkHM-Hkn--WxIgOtsHJuFAAzxTdeUFfR?usp=sharing" class="reverse-color"><i class="fa-solid fa-newspaper fa-2x"></i></a>
                 </div>
             </div>
         </div>
