--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h1 class="section-title">Portfolio</h1>
     <section id="portfolio">
         <div class="portfolio-item">
-            <img src="assets/images/hr_dashboard.png" alt="Andrew Shiroma's Tableau HR Dashboard." class="portfolio-img">
+            <img src="assets/images/hr_dashboard.PNG" alt="Andrew Shiroma's Tableau HR Dashboard." class="portfolio-img">
             <div class="portfolio-text">
                 <h2>HR Analytics Dashboard</h2>
                 <h3>2024</h3>
