added link-icons class to footer

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <section id="intro">
         <div id="intro-text">
-            <h1>Hi, I'm Andrew</h1>
-            <h2>An aspiring <span class="text-fancy">computer scientist</span></h2>
+            <h2 id="intro-hi">Hi, I'm Andrew</h2>
+            <h1 id="intro-title">An aspiring <span class="text-fancy">computer scientist</span></h1>
             <p>I dabble in <span class="text-fancy">hmtl</span>, <span class="text-fancy">css</span>, <span class="text-fancy">python</span>, and <span class="text-fancy">sql</span></p>
             <div id="intro-icons">
                 <div>
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div>
-            <img src="assets/images/self.jpg" alt="Headshot of Andrew Shiroma" id="intro-image">            
+            <img src="assets/images/self.png" alt="Headshot of Andrew Shiroma" id="intro-image">            
         </div>
     </section>
 
@@ -86,11 +86,9 @@
         </div>
     </section>
     
-    <footer>
+    <footer class="link-icons">
         <a href="https://www.github.com/Awnder"><i class="fa-brands fa-github fa-2x"></i></a>
-        <p>|</p>
         <a href="https://www.linkedin.com/in/andrewshiroma"><i class="fa-brands fa-linkedin fa-2x"></i></a>
-        <p>|</p>
         <a href="mailto:amshiroma.business@gmail.com"><i class="fa-solid fa-envelope fa-2x"></i></a>
     </footer>
     <script src="assets/javascript/script.js"></script>
