--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta lang="en">
     <meta name="author" content="Andrew Shiroma">
     <meta name="description" content="Portfolio website of computer science engineer Andrew Shiroma">
     <meta name="keywords" content="HTML, CSS, portfolio, resume, computer science, software engineer, Andrew, Shiroma">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Language" content="en-US">
 
     <title>Andrew Shiroma | Portfolio</title>
     <link href="assets/css/styles.css" rel="stylesheet">
