removed the red border I forgot to remove during testing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <section id="intro">
-        <div id="intro-text" class="test">
+        <div id="intro-text">
             <h2 id="intro-hi">Hi, I'm Andrew</h2>
             <h1 id="intro-title">An aspiring <span class="text-fancy">computer scientist</span></h1>
             <p>I dabble in <span class="text-fancy">hmtl</span>, <span class="text-fancy">css</span>, <span class="text-fancy">python</span>, and <span class="text-fancy">sql</span></p>
