--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
     <base target="_blank">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4XH7XP6P33"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4XH7XP6P33');
+</script>
 <body class="fade-in">
     <nav>
         <div><h2><a href="index.html" target="_self">ANDREW<span class="text-fancy">SHIROMA</span></a></h2></div>
