added preload attr to self img

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-        <img src="assets/images/self.webp" alt="Headshot of Andrew Shiroma" id="intro-image">            
+        <img src="assets/images/self.webp" alt="Headshot of Andrew Shiroma" rel="preload" id="intro-image">            
     </section>
 
     <img src="assets/images/arrowdown.webp" alt="arrow pointing to portfolio" id="arrowdown" class="float">
