--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="assets/css/styles.css" rel="stylesheet">
     
     <link rel="icon" href="assets/images/as_icon.webp" type="image/icon">
-    <link rel="preload" as="image" href="assets/images/self.webp">
 
     <base target="_blank">
 </head>
@@ -45,7 +44,9 @@
                 </div>
             </div>
         </div>
-        <img src="assets/images/self.webp" alt="Headshot of Andrew Shiroma" rel="preload" id="intro-image">            
+        <img src="assets/images/self_1080px.webp" alt="Headshot of Andrew Shiroma" 
+            srcset="assets/images/self_980px.webp 980w, assets/images/self_640px.webp 640w, assets/images/self_320px.webp 320w" 
+            rel="preload" as="image" id="intro-image"/>
     </section>
 
     <img src="assets/images/arrowdown.webp" alt="arrow pointing to portfolio" id="arrowdown" class="float">
