compressed css and removed preload attr on self  which isnt too important

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <img src="assets/images/self_1080px.webp" alt="Headshot of Andrew Shiroma" 
             srcset="assets/images/self_980px.webp 980w, assets/images/self_640px.webp 640w, assets/images/self_320px.webp 320w" 
-            rel="preload" as="image" id="intro-image"/>
+            as="image" id="intro-image"/>
     </section>
 
     <img src="assets/images/arrowdown.webp" alt="arrow pointing to portfolio" id="arrowdown" class="float">
