changed occupation, description, and added lightcard

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div id="intro-text">
             <h2 id="intro-hi">Hi, I'm Andrew</h2>
             <h1 id="intro-title">An aspiring <span class="text-fancy">computer scientist</span></h1>
-            <p>I dabble in <span class="text-fancy">hmtl</span>, <span class="text-fancy">css</span>, <span class="text-fancy">python</span>, and <span class="text-fancy">sql</span></p>
+            <p>I develop using <span class="text-fancy">React</span>, <span class="text-fancy">Next.js</span>, and <span class="text-fancy">Python</span>, with backend experience in <span class="text-fancy">Firebase</span>.</p>
             <div id="intro-icons">
-                <a href="assets/documents/resume_andrew_shiroma.pdf" class="button" download>RESUME</a>
+                <a href="https://docs.google.com/document/d/108chu9hoF5SS0uYm-a7LmY2hnTgRPbnw/edit?usp=sharing&ouid=100900354933858210784&rtpof=true&sd=true" class="button">RESUME</a>
                 <div class="link-icons">
                     <a href="https://www.github.com/Awnder"><i class="fa-brands fa-github fa-2x"></i></a>
                     <a href="https://www.linkedin.com/in/andrewshiroma"><i class="fa-brands fa-linkedin fa-2x"></i></a>
@@ -64,7 +64,7 @@
             <div class="portfolio-text">
                 <h2>Current Occupation:</h2>
                 <h3>2024</h3>
-                <p>Fellow at Headstarter AI</p>
+                <p>Data Analyst Intern at Saddleback Church</p>
             </div>
         </div>
     </section>
@@ -73,7 +73,7 @@
         <div class="portfolio-item">
             <div class="portfolio-text">
                 <h2>HR Analytics Dashboard</h2>
-                <h3>2024</h3>
+                <h3>June 2024</h3>
                 <p>An interactive Tableau dashboard displaying fictional HR employee attrition data.</p>
                 <p>This project focused on Tableau and data visualization.</p>
                 <a href="https://public.tableau.com/views/HR_analytics_dashboard_17213380871360/HRAnalyticsDashboard?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="reverse-color"><i class="fa-regular fa-chart-bar fa-2x"></i></a>
@@ -82,13 +82,13 @@
         </div>
         <div class="portfolio-item">
             <div class="portfolio-text">
-                <h2>Streamflow Forecast</h2>
-                <h3>2024</h3>
-                <p>Using an anchor date, this python file retrieves government-monitored river water data from the current year and the past nine years.</p>
-                <p>This project focused on Python and Pandas.</p>
-                <a href="https://www.github.com/Awnder/streamflow-forecast-shiroma" class="reverse-color"><i class="fa-brands fa-github fa-2x"></i></a>
+                <h2>Lightcard</h2>
+                <h3>Aug 2024</h3>
+                <p>Illuminate your studying with Lightcard, the OpenAI-enabled flashcard generator.</p>
+                <p>Lightcard was developed at <a href="https://headstarter.co/" class="reverse-color">Headstarter</a> in a team of three.</p>
+                <a href="https://ai-flashcards-pi.vercel.app/" class="reverse-color"><img loading="lazy" src="assets/images/lightcard.webp" width="40px"></a>
             </div>
-            <img loading="lazy" src="assets/images/streamflow.webp" alt="Andrew Shiroma's Streamflow Python Project" class="portfolio-img">
+            <img loading="lazy" src="assets/images/lightcard_home.webp" alt="Andrew Shiroma's Lightcard" class="portfolio-img">
         </div> 
         <div class="portfolio-item">
             <div class="portfolio-text">
